--- a/likelihood/lsst_xi_gg.yaml
+++ b/likelihood/lsst_xi_gg.yaml
@@ -18,4 +18,4 @@ filename_baryon_pca: "./projects/lsst_les/data/pca.txt"
 print_datavector: False
 print_datavector_file: "./projects/lsst_les/chains/lsst_les_y1_theory.modelvector"
 
-params: !defaults [params_lsst_3x2pt]
+params: !defaults [params_lsst_lens, params_lsst_source]
