--- a/EXAMPLE_EVALUATE2v2.yaml
+++ b/EXAMPLE_EVALUATE2v2.yaml
@@ -4,13 +4,13 @@ stop_at_error: False
 
 likelihood:
   lsst_les.lsst_3x2pt:
-    data_file: LSST_Y1_ONES.dataset
+    data_file: LSST_Y3_M1.dataset
     path: ./external_modules/data/lsst_les
-    print_datavector: True
-    print_datavector_file: "./projects/lsst_les/chains/lsst_les_y1_theory.modelvector"
-    accuracyboost: 4.0
-    integration_accuracy: 20
-    kmax_boltzmann: 30.0
+    print_datavector: False
+    print_datavector_file: "./projects/lsst_les/chains/lsst_les_y3_theory.modelvector"
+    accuracyboost: 1.0
+    integration_accuracy: 0
+    kmax_boltzmann: 5.0
 
 params:
   As_1e9:
@@ -381,13 +381,13 @@ theory:
     use_renames: True
     extra_args:
       halofit_version: takahashi
-      AccuracyBoost: 3.0
+      AccuracyBoost: 1.1
       lens_potential_accuracy: 1.0
       num_massive_neutrinos: 1
       nnu: 3.046
       dark_energy_model: ppf
       accurate_massive_neutrino_transfers: false
-      k_per_logint: 40
+      k_per_logint: 20
 
 sampler:
   evaluate:
@@ -431,4 +431,4 @@ sampler:
       LSST_B1_9: 2.1
       LSST_B1_10: 2.2
 
-output: ./projects/lsst_les/chains/EXAMPLE_EVALUATE1
+output: ./projects/lsst_les/chains/EXAMPLE_EVALUATE2V2
