--- a/EXAMPLE_MCMC8.yaml
+++ b/EXAMPLE_MCMC8.yaml
@@ -3,14 +3,14 @@ debug: False
 stop_at_error: False
 
 likelihood:
-  lsst_les.lsst_3x2pt:
-    data_file: LSST_Y1_ONES.dataset
+  lsst_les.lsst_cosmic_shear:
+    data_file: LSST_Y3_M4.dataset
     path: ./external_modules/data/lsst_les
-    print_datavector: True
-    print_datavector_file: "./projects/lsst_les/chains/lsst_les_y1_theory.modelvector"
-    accuracyboost: 4.0
-    integration_accuracy: 20
-    kmax_boltzmann: 30.0
+    print_datavector: False
+    print_datavector_file: "./projects/lsst_les/chains/example1_lsst_les_y3_theory.modelvector"
+    accuracyboost: 1.0
+    integration_accuracy: 1
+    kmax_boltzmann: 10.0
 
 params:
   As_1e9:
@@ -122,9 +122,6 @@ params:
   logAs:
     derived: 'lambda As: np.log(As * 10**10)'
     latex: \log(A_s \times 10^{10})
-  h:
-    derived: 'lambda H0: H0/100.0'
-    latex: h
 # ---------------------------------------------------------------------------------------
 # ---------------------------------------------------------------------------------------
 # ---------------------------------------------------------------------------------------
@@ -381,54 +378,85 @@ theory:
     use_renames: True
     extra_args:
       halofit_version: takahashi
-      AccuracyBoost: 3.0
+      AccuracyBoost: 1.15
       lens_potential_accuracy: 1.0
       num_massive_neutrinos: 1
       nnu: 3.046
       dark_energy_model: ppf
       accurate_massive_neutrino_transfers: false
-      k_per_logint: 40
+      k_per_logint: 20
 
 sampler:
-  evaluate:
-    N: 1
-    override:
-      As_1e9: 2.14881151807
-      ns: 0.97
-      H0: 69.00
-      omegab: 0.04116782188
-      omegam: 0.31018158414
-      LSST_DZ_S1: 0.0
-      LSST_DZ_S2: 0.0
-      LSST_DZ_S3: 0.0
-      LSST_DZ_S4: 0.0
-      LSST_DZ_S5: 0.0
-      LSST_DZ_S6: 0.0
-      LSST_DZ_S7: 0.0
-      LSST_DZ_S8: 0.0
-      LSST_DZ_S9: 0.0
-      LSST_DZ_S10: 0.0
-      LSST_M1: 0.0
-      LSST_M2: 0.0
-      LSST_M3: 0.0
-      LSST_M4: 0.0
-      LSST_M5: 0.0
-      LSST_M6: 0.0
-      LSST_M7: 0.0
-      LSST_M8: 0.0
-      LSST_M9: 0.0
-      LSST_M10: 0.0
-      LSST_A1_1: 0.5
-      LSST_A1_2: 0.0
-      LSST_B1_1: 1.3
-      LSST_B1_2: 1.4
-      LSST_B1_3: 1.5
-      LSST_B1_4: 1.6
-      LSST_B1_5: 1.7
-      LSST_B1_6: 1.8
-      LSST_B1_7: 1.9
-      LSST_B1_8: 2.0
-      LSST_B1_9: 2.1
-      LSST_B1_10: 2.2
+  mcmc:
+    # ---------------------------------------------------------------------
+    # File (w/ path) or matrix defining a covariance matrix for the proposal:
+    # - null (default): will be generated from params info (prior and proposal)
+    # - matrix: remember to set `covmat_params` to the parameters in the matrix
+    covmat:
+    covmat_params:
+    # --------------------------------------
+    # --------------------------------------
+    # Proposal covariance matrix learning
+    # --------------------------------------
+    # --------------------------------------
+    learn_proposal: True
+    # Don't learn if convergence better than...
+    learn_proposal_Rminus1_min: 0.03
+    learn_proposal_Rminus1_max: 100
+    # (even earlier if a param is not in the given covariance matrix)
+    learn_proposal_Rminus1_max_early: 500
+    # --------------------------------------
+    # --------------------------------------
+    # Convergence and stopping
+    # --------------------------------------
+    # --------------------------------------
+    # Maximum number of posterior evaluations
+    max_samples: .inf
+    # Gelman-Rubin R-1 on means
+    Rminus1_stop: 0.005
+    # Gelman-Rubin R-1 on std deviations
+    Rminus1_cl_stop: 0.15
+    Rminus1_cl_level: 0.95
+    # --------------------------------------
+    # --------------------------------------
+    # Exploiting speed hierarchy
+    # --------------------------------------
+    # --------------------------------------
+    measure_speeds: False
+    drag: False
+    oversample_power: 0.2
+    oversample_thin: True
+    blocking:
+      - [1,
+          [
+            As_1e9, ns, H0, omegab, omegam
+          ]
+        ]
+      - [3,
+          [
+            LSST_DZ_S1, LSST_DZ_S2, LSST_DZ_S3, LSST_DZ_S4, LSST_DZ_S5, 
+            LSST_DZ_S6, LSST_DZ_S7, LSST_DZ_S8, LSST_DZ_S9, LSST_DZ_S10,
+            LSST_A1_1, LSST_A1_2,
+          ]
+        ]
+      - [25,
+          [
+            LSST_M1, LSST_M2, LSST_M3, LSST_M4, LSST_M5,
+            LSST_M6, LSST_M7, LSST_M8, LSST_M9, LSST_M10
+          ]
+        ]
+    # --------------------------------------
+    # --------------------------------------
+    # Avoid chain getting suck forever
+    # --------------------------------------
+    # --------------------------------------
+    max_tries: 10000
+    burn_in: 0
+    # ---------------------------------------------------------------------
+    # ---------------------------------------------------------------------
+    # When no MPI used, number of fractions of the chain to compare
+    # ---------------------------------------------------------------------
+    # ---------------------------------------------------------------------
+    Rminus1_single_split: 4
 
-output: ./projects/lsst_les/chains/EXAMPLE_EVALUATE1
+output: ./projects/lsst_les/chains/EXAMPLE_MCMC8
