--- a/EXAMPLE_MCMC32.yaml
+++ b/EXAMPLE_MCMC32.yaml
@@ -1,22 +1,20 @@
 timing: True
 debug: False
-stop_at_error: True
+stop_at_error: False
 
 likelihood:
   lsst_les.lsst_3x2pt:
     data_file: LSST_Y10_M4.dataset
     path: ./external_modules/data/lsst_les
-    print_datavector: False
-    print_datavector_file: "./projects/lsst_les/chains/example1_lsst_les_y1_theory.modelvector"
     accuracyboost: 1.0
     integration_accuracy: 1
-    kmax_boltzmann: 10.0
+    kmax_boltzmann: 5.0
 
 params:
   As_1e9:
     prior:
-      min: 0.5
-      max: 5
+      min: 1.7
+      max: 2.5
     ref:
       dist: norm
       loc: 2.1
@@ -27,8 +25,8 @@ params:
     renames: A
   ns:
     prior:
-      min: 0.87
-      max: 1.07
+      min: 0.92
+      max: 1.00
     ref:
       dist: norm
       loc: 0.96605
@@ -37,18 +35,18 @@ params:
     latex: n_\mathrm{s}
   H0:
     prior:
-      min: 55
-      max: 91
+      min: 61
+      max: 73
     ref:
       dist: norm
       loc: 67.32
-      scale: 5
+      scale: 3
     proposal: 3
     latex: H_0
   omegab:
     prior:
-      min: 0.03
-      max: 0.07
+      min: 0.04
+      max: 0.06
     ref:
       dist: norm
       loc: 0.0495
@@ -58,8 +56,8 @@ params:
     drop: true
   omegam:
     prior:
-      min: 0.1
-      max: 0.9
+      min: 0.24
+      max: 0.40
     ref:
       dist: norm
       loc: 0.316
@@ -68,34 +66,10 @@ params:
     latex: \Omega_\mathrm{m}
     drop: true
   mnu:
-    prior:
-      min: 0.06
-      max: 0.6
-    ref:
-      dist: norm
-      loc: 0.25
-      scale: 0.1
+    value: 0.06
     proposal: 0.05
-  w0pwa:
-    prior:
-      min: -5 
-      max: -0.01
-    ref:
-      dist: norm
-      loc: -0.99
-      scale: 0.05
-    proposal: 0.05
-    latex: w_{0,\mathrm{DE}}+w_{a,\mathrm{DE}}
-    drop: true
   w:
-    prior:
-      min: -3
-      max: -0.01
-    ref:
-      dist: norm
-      loc: -0.99
-      scale: 0.05
-    proposal: 0.05
+    value: -1.0
     latex: w_{0,\mathrm{DE}}
   tau:
     value: 0.0697186
@@ -110,9 +84,6 @@ params:
   As:
     value: 'lambda As_1e9: 1e-9 * As_1e9'
     latex: A_\mathrm{s}
-  wa:
-    value: 'lambda w0pwa, w: w0pwa - w'
-    latex: w_{a,\mathrm{DE}}
   omegabh2:
     value: 'lambda omegab, H0: omegab*(H0/100)**2'
     latex: \Omega_\mathrm{b} h^2
@@ -397,6 +368,107 @@ params:
       scale: 0.01
     proposal: 0.01
     latex: m_\mathrm{LSST}^{10}
+  # Bin bias parameters
+  LSST_B1_1:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 1.24
+      scale: 0.15
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^1
+  LSST_B1_2:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 1.36
+      scale: 0.15
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^2
+  LSST_B1_3:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 1.47
+      scale: 0.15
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^3
+  LSST_B1_4:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 1.60
+      scale: 0.15
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^4
+  LSST_B1_5:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 1.76
+      scale: 0.1
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^5
+  LSST_B1_6:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 1.8
+      scale: 0.1
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^6
+  LSST_B1_7:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 2.0
+      scale: 0.1
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^7
+  LSST_B1_8:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 2.15
+      scale: 0.1
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^8
+  LSST_B1_9:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 2.30
+      scale: 0.1
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^9
+  LSST_B1_10:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 2.45
+      scale: 0.1
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^10
 # ---------------------------------------------------------------------------------------
 # ---------------------------------------------------------------------------------------
 # ---------------------------------------------------------------------------------------
@@ -417,58 +489,77 @@ theory:
       k_per_logint: 20
 
 sampler:
-  evaluate:
-    N: 1
-    override:
-      As_1e9: 2.14881151807
-      ns: 0.97
-      H0: 69.00
-      omegab: 0.04116782188
-      omegam: 0.31018158414
-      mnu: 0.06
-      LSST_DZ_S1: 0.0
-      LSST_DZ_S2: 0.0
-      LSST_DZ_S3: 0.0
-      LSST_DZ_S4: 0.0
-      LSST_DZ_S5: 0.0
-      LSST_DZ_S6: 0.0
-      LSST_DZ_S7: 0.0
-      LSST_DZ_S8: 0.0
-      LSST_DZ_S9: 0.0
-      LSST_DZ_S10: 0.0
-      LSST_M1: 0.0
-      LSST_M2: 0.0
-      LSST_M3: 0.0
-      LSST_M4: 0.0
-      LSST_M5: 0.0
-      LSST_M6: 0.0
-      LSST_M7: 0.0
-      LSST_M8: 0.0
-      LSST_M9: 0.0
-      LSST_M10: 0.0
-      LSST_A1_1: 0.5
-      LSST_A1_2: 0.0
-      w0pwa: -0.999
-      w: -0.999
-      LSST_DZ_L1: 0.0
-      LSST_DZ_L2: 0.0
-      LSST_DZ_L3: 0.0
-      LSST_DZ_L4: 0.0
-      LSST_DZ_L5: 0.0
-      LSST_DZ_L6: 0.0
-      LSST_DZ_L7: 0.0
-      LSST_DZ_L8: 0.0
-      LSST_DZ_L9: 0.0
-      LSST_DZ_L10: 0.0
-      LSST_B1_1: 1.0
-      LSST_B1_2: 1.0
-      LSST_B1_3: 1.0
-      LSST_B1_4: 1.0
-      LSST_B1_5: 1.0
-      LSST_B1_6: 1.0
-      LSST_B1_7: 1.0
-      LSST_B1_8: 1.0
-      LSST_B1_9: 1.0
-      LSST_B1_10: 1.0
+  mcmc:
+    # ---------------------------------------------------------------------
+    # File (w/ path) or matrix defining a covariance matrix for the proposal:
+    # - null (default): will be generated from params info (prior and proposal)
+    # - matrix: remember to set `covmat_params` to the parameters in the matrix
+    covmat:
+    covmat_params:
+    # --------------------------------------
+    # --------------------------------------
+    # Proposal covariance matrix learning
+    # --------------------------------------
+    # --------------------------------------
+    learn_proposal: True
+    # Don't learn if convergence better than...
+    learn_proposal_Rminus1_min: 0.03
+    learn_proposal_Rminus1_max: 100
+    # (even earlier if a param is not in the given covariance matrix)
+    learn_proposal_Rminus1_max_early: 500
+    # --------------------------------------
+    # --------------------------------------
+    # Convergence and stopping
+    # --------------------------------------
+    # --------------------------------------
+    # Maximum number of posterior evaluations
+    max_samples: .inf
+    # Gelman-Rubin R-1 on means
+    Rminus1_stop: 0.005
+    # Gelman-Rubin R-1 on std deviations
+    Rminus1_cl_stop: 0.15
+    Rminus1_cl_level: 0.95
+    # --------------------------------------
+    # --------------------------------------
+    # Exploiting speed hierarchy
+    # --------------------------------------
+    # --------------------------------------
+    measure_speeds: False
+    drag: False
+    oversample_power: 0.2
+    oversample_thin: True
+    blocking:
+      - [1,
+          [
+            As_1e9, ns, H0, omegab, omegam
+          ]
+        ]
+      - [2,
+          [
+            LSST_DZ_S1, LSST_DZ_S2, LSST_DZ_S3, LSST_DZ_S4, LSST_DZ_S5, 
+            LSST_DZ_S6, LSST_DZ_S7, LSST_DZ_S8, LSST_DZ_S9, LSST_DZ_S10,
+            LSST_A1_1, LSST_A1_2, LSST_B1_1, LSST_B1_2, LSST_B1_3, LSST_B1_4
+            LSST_B1_5, LSST_B1_6, LSST_B1_7, LSST_B1_8, LSST_B1_9, LSST_B1_10
+          ]
+        ]
+      - [25,
+          [
+            LSST_M1, LSST_M2, LSST_M3, LSST_M4, LSST_M5,
+            LSST_M6, LSST_M7, LSST_M8, LSST_M9, LSST_M10
+          ]
+        ]
+    # --------------------------------------
+    # --------------------------------------
+    # Avoid chain getting suck forever
+    # --------------------------------------
+    # --------------------------------------
+    max_tries: 10000
+    burn_in: 0
+    # ---------------------------------------------------------------------
+    # ---------------------------------------------------------------------
+    # When no MPI used, number of fractions of the chain to compare
+    # ---------------------------------------------------------------------
+    # ---------------------------------------------------------------------
+    Rminus1_single_split: 4
 
-output: ./projects/lsst_les/chains/EXAMPLE_EVALUATE32
+output: ./projects/lsst_les/chains/EXAMPLE_MCMC32
