--- a/EXAMPLE_MCMC2.yaml
+++ b/EXAMPLE_MCMC2.yaml
@@ -6,11 +6,9 @@ likelihood:
   lsst_les.lsst_cosmic_shear:
     data_file: LSST_Y1_M2.dataset
     path: ./external_modules/data/lsst_les
-    print_datavector: False
-    print_datavector_file: "./projects/lsst_les/chains/example1_lsst_les_y1_theory.modelvector"
     accuracyboost: 1.0
-    integration_accuracy: 1
-    kmax_boltzmann: 10.0
+    integration_accuracy: 0
+    kmax_boltzmann: 5.0
 
 params:
   As_1e9:
@@ -395,7 +393,7 @@ sampler:
     # File (w/ path) or matrix defining a covariance matrix for the proposal:
     # - null (default): will be generated from params info (prior and proposal)
     # - matrix: remember to set `covmat_params` to the parameters in the matrix
-    covmat:
+    covmat: './projects/lsst_les/LSSTONLY_3x2pt.covmat'
     covmat_params:
     # --------------------------------------
     # --------------------------------------
