--- a/EXAMPLE_MCMC18.yaml
+++ b/EXAMPLE_MCMC18.yaml
@@ -494,7 +494,7 @@ sampler:
     # File (w/ path) or matrix defining a covariance matrix for the proposal:
     # - null (default): will be generated from params info (prior and proposal)
     # - matrix: remember to set `covmat_params` to the parameters in the matrix
-    covmat:
+    covmat: './projects/lsst_les/LSSTONLY_3x2pt.covmat'
     covmat_params:
     # --------------------------------------
     # --------------------------------------
@@ -538,7 +538,7 @@ sampler:
           [
             LSST_DZ_S1, LSST_DZ_S2, LSST_DZ_S3, LSST_DZ_S4, LSST_DZ_S5, 
             LSST_DZ_S6, LSST_DZ_S7, LSST_DZ_S8, LSST_DZ_S9, LSST_DZ_S10,
-            LSST_A1_1, LSST_A1_2, LSST_B1_1, LSST_B1_2, LSST_B1_3, LSST_B1_4
+            LSST_A1_1, LSST_A1_2, LSST_B1_1, LSST_B1_2, LSST_B1_3, LSST_B1_4,
             LSST_B1_5, LSST_B1_6, LSST_B1_7, LSST_B1_8, LSST_B1_9, LSST_B1_10
           ]
         ]
