--- a/EXAMPLE_MCMC27.yaml
+++ b/EXAMPLE_MCMC27.yaml
@@ -437,7 +437,7 @@ sampler:
           [
             LSST_DZ_S1, LSST_DZ_S2, LSST_DZ_S3, LSST_DZ_S4, LSST_DZ_S5, 
             LSST_DZ_S6, LSST_DZ_S7, LSST_DZ_S8, LSST_DZ_S9, LSST_DZ_S10,
-            LSST_A1_1, LSST_A1_2, LSST_B1_1, LSST_B1_2, LSST_B1_3, LSST_B1_4
+            LSST_A1_1, LSST_A1_2, LSST_B1_1, LSST_B1_2, LSST_B1_3, LSST_B1_4,
             LSST_B1_5, LSST_B1_6, LSST_B1_7, LSST_B1_8, LSST_B1_9, LSST_B1_10
           ]
         ]
