--- a/EXAMPLE_MCMC15.yaml
+++ b/EXAMPLE_MCMC15.yaml
@@ -3,8 +3,8 @@ debug: False
 stop_at_error: False
 
 likelihood:
-  lsst_les.lsst_cosmic_shear:
-    data_file: LSST_Y10_M3.dataset
+  lsst_les.lsst_3x2pt:
+    data_file: LSST_Y1_M3.dataset
     path: ./external_modules/data/lsst_les
     accuracyboost: 1.0
     integration_accuracy: 0
@@ -120,6 +120,9 @@ params:
   logAs:
     derived: 'lambda As: np.log(As * 10**10)'
     latex: \log(A_s \times 10^{10})
+  h:
+    derived: 'lambda H0: H0/100.0'
+    latex: h
 # ---------------------------------------------------------------------------------------
 # ---------------------------------------------------------------------------------------
 # ---------------------------------------------------------------------------------------
@@ -365,6 +368,107 @@ params:
       scale: 0.01
     proposal: 0.01
     latex: m_\mathrm{LSST}^{10}
+  # Bin bias parameters
+  LSST_B1_1:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 1.24
+      scale: 0.15
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^1
+  LSST_B1_2:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 1.36
+      scale: 0.15
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^2
+  LSST_B1_3:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 1.47
+      scale: 0.15
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^3
+  LSST_B1_4:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 1.60
+      scale: 0.15
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^4
+  LSST_B1_5:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 1.76
+      scale: 0.1
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^5
+  LSST_B1_6:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 1.8
+      scale: 0.1
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^6
+  LSST_B1_7:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 2.0
+      scale: 0.1
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^7
+  LSST_B1_8:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 2.15
+      scale: 0.1
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^8
+  LSST_B1_9:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 2.30
+      scale: 0.1
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^9
+  LSST_B1_10:
+    prior:
+      min: 0.8
+      max: 3
+    ref:
+      dist: norm
+      loc: 2.45
+      scale: 0.1
+    proposal: 0.1
+    latex: b_\mathrm{1-LSST}^10
 # ---------------------------------------------------------------------------------------
 # ---------------------------------------------------------------------------------------
 # ---------------------------------------------------------------------------------------
@@ -390,7 +494,7 @@ sampler:
     # File (w/ path) or matrix defining a covariance matrix for the proposal:
     # - null (default): will be generated from params info (prior and proposal)
     # - matrix: remember to set `covmat_params` to the parameters in the matrix
-    covmat:
+    covmat: './projects/lsst_les/LSSTONLY_3x2pt.covmat'
     covmat_params:
     # --------------------------------------
     # --------------------------------------
@@ -430,11 +534,12 @@ sampler:
             As_1e9, ns, H0, omegab, omegam
           ]
         ]
-      - [3,
+      - [2,
           [
             LSST_DZ_S1, LSST_DZ_S2, LSST_DZ_S3, LSST_DZ_S4, LSST_DZ_S5, 
             LSST_DZ_S6, LSST_DZ_S7, LSST_DZ_S8, LSST_DZ_S9, LSST_DZ_S10,
-            LSST_A1_1, LSST_A1_2,
+            LSST_A1_1, LSST_A1_2, LSST_B1_1, LSST_B1_2, LSST_B1_3, LSST_B1_4,
+            LSST_B1_5, LSST_B1_6, LSST_B1_7, LSST_B1_8, LSST_B1_9, LSST_B1_10
           ]
         ]
       - [25,
