--- a/EXAMPLE_MCMC20.yaml
+++ b/EXAMPLE_MCMC20.yaml
@@ -4,7 +4,7 @@ stop_at_error: False
 
 likelihood:
   lsst_les.lsst_3x2pt:
-    data_file: LSST_Y1_M4.dataset
+    data_file: LSST_Y6_M2.dataset
     path: ./external_modules/data/lsst_les
     accuracyboost: 1.0
     integration_accuracy: 0
@@ -368,107 +368,6 @@ params:
       scale: 0.01
     proposal: 0.01
     latex: m_\mathrm{LSST}^{10}
-  # Bin bias parameters
-  LSST_B1_1:
-    prior:
-      min: 0.8
-      max: 3
-    ref:
-      dist: norm
-      loc: 1.24
-      scale: 0.15
-    proposal: 0.1
-    latex: b_\mathrm{1-LSST}^1
-  LSST_B1_2:
-    prior:
-      min: 0.8
-      max: 3
-    ref:
-      dist: norm
-      loc: 1.36
-      scale: 0.15
-    proposal: 0.1
-    latex: b_\mathrm{1-LSST}^2
-  LSST_B1_3:
-    prior:
-      min: 0.8
-      max: 3
-    ref:
-      dist: norm
-      loc: 1.47
-      scale: 0.15
-    proposal: 0.1
-    latex: b_\mathrm{1-LSST}^3
-  LSST_B1_4:
-    prior:
-      min: 0.8
-      max: 3
-    ref:
-      dist: norm
-      loc: 1.60
-      scale: 0.15
-    proposal: 0.1
-    latex: b_\mathrm{1-LSST}^4
-  LSST_B1_5:
-    prior:
-      min: 0.8
-      max: 3
-    ref:
-      dist: norm
-      loc: 1.76
-      scale: 0.1
-    proposal: 0.1
-    latex: b_\mathrm{1-LSST}^5
-  LSST_B1_6:
-    prior:
-      min: 0.8
-      max: 3
-    ref:
-      dist: norm
-      loc: 1.8
-      scale: 0.1
-    proposal: 0.1
-    latex: b_\mathrm{1-LSST}^6
-  LSST_B1_7:
-    prior:
-      min: 0.8
-      max: 3
-    ref:
-      dist: norm
-      loc: 2.0
-      scale: 0.1
-    proposal: 0.1
-    latex: b_\mathrm{1-LSST}^7
-  LSST_B1_8:
-    prior:
-      min: 0.8
-      max: 3
-    ref:
-      dist: norm
-      loc: 2.15
-      scale: 0.1
-    proposal: 0.1
-    latex: b_\mathrm{1-LSST}^8
-  LSST_B1_9:
-    prior:
-      min: 0.8
-      max: 3
-    ref:
-      dist: norm
-      loc: 2.30
-      scale: 0.1
-    proposal: 0.1
-    latex: b_\mathrm{1-LSST}^9
-  LSST_B1_10:
-    prior:
-      min: 0.8
-      max: 3
-    ref:
-      dist: norm
-      loc: 2.45
-      scale: 0.1
-    proposal: 0.1
-    latex: b_\mathrm{1-LSST}^10
 # ---------------------------------------------------------------------------------------
 # ---------------------------------------------------------------------------------------
 # ---------------------------------------------------------------------------------------
@@ -494,7 +393,7 @@ sampler:
     # File (w/ path) or matrix defining a covariance matrix for the proposal:
     # - null (default): will be generated from params info (prior and proposal)
     # - matrix: remember to set `covmat_params` to the parameters in the matrix
-    covmat: './projects/lsst_les/LSSTONLY_3x2pt.covmat'
+    covmat:
     covmat_params:
     # --------------------------------------
     # --------------------------------------
