--- a/EXAMPLE_MCMC4.yaml
+++ b/EXAMPLE_MCMC4.yaml
@@ -4,7 +4,7 @@ stop_at_error: False
 
 likelihood:
   lsst_les.lsst_cosmic_shear:
-    data_file: LSST_Y1_M4.dataset
+    data_file: LSST_Y3_M1.dataset
     path: ./external_modules/data/lsst_les
     accuracyboost: 1.0
     integration_accuracy: 0
@@ -120,9 +120,6 @@ params:
   logAs:
     derived: 'lambda As: np.log(As * 10**10)'
     latex: \log(A_s \times 10^{10})
-  h:
-    derived: 'lambda H0: H0/100.0'
-    latex: h
 # ---------------------------------------------------------------------------------------
 # ---------------------------------------------------------------------------------------
 # ---------------------------------------------------------------------------------------
@@ -393,7 +390,7 @@ sampler:
     # File (w/ path) or matrix defining a covariance matrix for the proposal:
     # - null (default): will be generated from params info (prior and proposal)
     # - matrix: remember to set `covmat_params` to the parameters in the matrix
-    covmat: './projects/lsst_les/LSSTONLY_3x2pt.covmat'
+    covmat:
     covmat_params:
     # --------------------------------------
     # --------------------------------------
