--- a/EXAMPLE_MCMC4.yaml
+++ b/EXAMPLE_MCMC4.yaml
@@ -390,7 +390,7 @@ sampler:
     # File (w/ path) or matrix defining a covariance matrix for the proposal:
     # - null (default): will be generated from params info (prior and proposal)
     # - matrix: remember to set `covmat_params` to the parameters in the matrix
-    covmat:
+    covmat: './projects/lsst_les/EXAMPLE_MCMC1.covmat'
     covmat_params:
     # --------------------------------------
     # --------------------------------------
@@ -422,7 +422,7 @@ sampler:
     # --------------------------------------
     measure_speeds: False
     drag: False
-    oversample_power: 0.2
+    oversample_power: 0.3
     oversample_thin: True
     blocking:
       - [1,
@@ -437,7 +437,7 @@ sampler:
             LSST_A1_1, LSST_A1_2,
           ]
         ]
-      - [25,
+      - [50,
           [
             LSST_M1, LSST_M2, LSST_M3, LSST_M4, LSST_M5,
             LSST_M6, LSST_M7, LSST_M8, LSST_M9, LSST_M10
