--- a/EXAMPLE_EVALUATE3v2.yaml
+++ b/EXAMPLE_EVALUATE3v2.yaml
@@ -10,8 +10,10 @@ likelihood:
     print_datavector_file: "./projects/lsst_les/chains/lsst_les_y6_theory.modelvector"
     accuracyboost: 1.0
     integration_accuracy: 0
-    kmax_boltzmann: 5.0
-
+    kmax_boltzmann: 1.0
+    # 1 EE2, 2 Halofit
+    non_linear_emul: 1
+    
 params:
   As_1e9:
     prior:
