--- a/EXAMPLE_EVALUATE1.yaml
+++ b/EXAMPLE_EVALUATE1.yaml
@@ -11,6 +11,8 @@ likelihood:
     accuracyboost: 4.0
     integration_accuracy: 20
     kmax_boltzmann: 30.0
+    # 1 EE2, 2 Halofit
+    non_linear_emul: 1
 
 params:
   As_1e9:
