--- a/EXAMPLE_MCMC1.yaml
+++ b/EXAMPLE_MCMC1.yaml
@@ -8,8 +8,10 @@ likelihood:
     path: ./external_modules/data/lsst_les
     accuracyboost: 1.0
     integration_accuracy: 0
-    kmax_boltzmann: 5.0
-
+    kmax_boltzmann: 1.0
+    # 1 EE2, 2 Halofit
+    non_linear_emul: 1
+    
 # IN THIS EXAMPLE, WE ASSUMED THE DATA VECTOR WERE CREATED W/ THE FOLLOWING 
 # PARAMETERS
 #  As_1e9: 2.14881151807
